--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.9
-  flutter_timeline_calendar: ^1.0.1
-  custom_navigation_bar: ^0.8.2
   titled_navigation_bar: ^4.1.0
+  get:
 
 
 dev_dependencies:
@@ -66,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/medicine/
     - assets/images/user.png
     - assets/images/medicine.png
   #   - images/a_dot_ham.jpeg
